--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "author": "John Barry",
   "name": "script-cellarise-bamboo",
   "description": "A collection of command line scripts for executing common build commands on Atlassian Bamboo",
-  "version": "0.0.0",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/Cellarise/script-cellarise-bamboo.git"
   },
   "config": {
-    "build": "n/a",
-    "buildTimestamp": "2014-08-21T04:49:46.649Z",
+    "build": "9",
+    "buildTimestamp": "2014-08-21T16:07:17.592+10:00",
     "adminEmail": "admin@cellarise.com"
   },
   "bin": {
@@ -19,8 +19,12 @@
   "optionalDependencies": {},
   "devDependencies": {
     "gulp": "^3.8.6",
+    "run-sequence": "^0.3.6",
     "gulp-rename": "^1.2.0",
+    "gulp-concat": "^2.3.4",
     "gulp-load": "^0.1.1",
+    "gulp-jsdoc-to-markdown": "^0.1.3",
+    "jsdoc-to-markdown": "^0.5.4",
     "gulp-dust-compile-render": "^0.1.0"
   }
 }
